Fix gaps

--- a/src/admin/settings/src/App.css
+++ b/src/admin/settings/src/App.css
@@ -132,7 +132,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  gap: 12%;
+  gap: 200px;
 }
 
 .vipps-mobilepay-react-form-field {
@@ -161,8 +161,7 @@
 .vipps-mobilepay-react-checkout-confirm .body {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  gap: 12%;
+  gap: 50px;
 }
 
 .vipps-mobilepay-react-checkout-confirm .title {
